syntax = "proto3";

package protocol;

option go_package = "./joined;joined";

// T2.2
message JoinMostProfitsProducts {
  string year_month_created_at = 1;
  string item_name = 2;
  double profit_sum = 3;
}

message JoinMostProfitsProductsBatch {
  repeated JoinMostProfitsProducts items = 1;
}